# sqlembed

./: .gitignore  Cargo.toml  demo_doc_2.docx  demo_presentation_1.pptx  demo_presentation_2.pptx  demo_presentation_3.pptx  demo_text_1.txt  demo_text_2.txt  demo_text_3.txt  demo_text_4.txt  demo_text_5.txt  dummy_parser_test.docx  hello.txt  massive_random_words.txt  postgres.txt  r.txt  readme.md  solar_system_reference.txt  sun.txt
docx/: demo_doc_1.docx  demo_doc_3.docx
docx/pptx/: demo_presentation.pptx  demo_presentation_2.pptx  demo_presentation_3.pptx  demo_text_3.txt  massive_demo.pptx
src/: cli.rs  constants.rs  main.rs  parse.rs  sql.rs  utils.rs
src/db/: mod.rs  mysql.rs  postgres.rs
