[package]
name = "sqlembed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sqlembed"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
docx-lite = "0.2.0"
fastembed = "5.15.0"
indicatif = "0.18.4"
mysql = "28.0.0"
native-tls = "0.2.18"
pdfsink-rs = "0.2.8"
postgres = "0.19.14"
postgres-native-tls = "0.5.3"
rustypptx = "0.2.0"
